syntax = "proto3";
package favorite;
option go_package = "tinytiktok/video/proto/favorite";
import "video/video.proto";

message FavoriteListRequest {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message FavoriteListResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated video.Video video_list = 3; // 用户点赞视频列表
}